# fuqr

./: .gitignore  Cargo.toml  README.md
benches/: qr.rs
examples/: bad_apple.rs  debug.rs  gif.rs  layers.rs  nested.rs  scale.rs  test.rs  weave.rs
src/: bit_info.rs  codewords.rs  constants.rs  data.rs  ecc.rs  encode.rs  encoding.rs  error_correction.rs  lib.rs  main.rs  mask.rs  math.rs  matrix.rs  qart.rs  qr.rs  qr_code.rs  qrcode.rs  render.rs  symbol.rs  version.rs  wasm.rs
src/render/: image.rs  svg.rs  text.rs
