[package]
name = "fuqr"
version = "1.0.0"
edition = "2021"
description = "feeling unemployed qr code generator"
repository = "https://github.com/zhengkyl/fuqr"
license = "MIT"
readme = "README.md"
exclude = [".gitignore", "benches/", "examples/"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:wee_alloc", "dep:js-sys", "dep:console_error_panic_hook"]
text = []
svg = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.69", optional = true }
resvg = { version = "0.42.0", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
image = "0.25.1"
criterion = { version = "0.5", features = ["html_reports"] }
qrcode = "0.14.1"
fast_qr = "0.12.5"
ffmpeg-next = "7.1.0"

[[bench]]
name = "qr"
path = "benches/qr.rs"
harness = false

[profile.release]
lto = true
